# paradise_garage

./: .gitignore  TODO.md  _config.yml  crate-notes.md  desk.md  equipment.md  francois-k.md  index.md  inspiration.md  lev-2026.md  movement-2026.md  pyproject.toml  recording.md  research.md  traktor-kaossilator.md
_layouts/: default.html
interviews/: juan-aguinaga-transcript.md  juan-aguinaga.md
metadata/: catalog.json
native/: .gitignore  Info.plist  build.sh  spotify-tap.swift
native/_CodeSignature/: CodeResources
scripts/: sync-from-remote.sh  sync-to-gdrive.sh
src/paradise_garage/: analyze.py  capture.py  catalog.py  cli.py  loudness.py  playback.py  record.py  split.py  spotify.py  structure.py  tag.py  traktor.py
tests/: test_traktor.py
